Cambios agregados al archivo HTML

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
     <article>
         <h1>ME DA MIEDO UBUNTO</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam aperiam placeat nostrum alias cum! Itaque molestias culpa consectetur nulla nostrum quam, provident impedit beatae a debitis at iure sequi optio?</p>
     </article>
 </body>
 </html>
